apps/guardrail-processor/base/database-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guardrail-processor
spec:
  template:
    spec:
      containers:
        - name: guardrail-processor
